part2/2/k8s/manifests/deployment-todo-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: todo-frontend-pvc
      containers:
        - name: todo-frontend
          image: deecaad/devopsk8s:part2-2-todo-frontend-8
          volumeMounts:
            - name: shared-files
              mountPath: /usr/src/app/dist/images
