part2/2/k8s/manifests/service-todo-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8086
