part2/2/k8s/manifests/service-todo-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8085
