part2/2/k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-prefix-strip@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 2346
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend-svc
                port:
                  number: 2345
